# omni-hive

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/omni-brain/: Cargo.toml
crates/omni-brain/src/: lib.rs
crates/omni-chain/: Cargo.toml
crates/omni-chain/src/: lib.rs
crates/omni-core/: Cargo.toml
crates/omni-core/src/: api.rs  config.rs  daemon.rs  main.rs  scheduler.rs
crates/omni-integrations/: Cargo.toml
crates/omni-integrations/src/: lib.rs
crates/omni-ir/: Cargo.toml
crates/omni-ir/src/: lib.rs
crates/omni-portal/: Cargo.toml
crates/omni-portal/src/: lib.rs
crates/omni-studio/: Cargo.toml
crates/omni-studio/src/: lib.rs
crates/omni-terminal/: Cargo.toml
crates/omni-terminal/src/: lib.rs
docs/: API.md  ARCHITECTURE.md
