[workspace]
resolver = "2"
members = [
    "crates/omni-core",
    "crates/omni-brain",
    "crates/omni-chain",
    "crates/omni-portal",
    "crates/omni-ir",
    "crates/omni-terminal",
    "crates/omni-studio",
    "crates/omni-integrations",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ouroboros"]
license = "MIT"
repository = "https://github.com/ouroboros/omni-hive"
description = "Universal AI Orchestration Engine - Self-Evolving Hyperdaemon"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "parking_lot"] }
futures = "0.3"
async-trait = "0.1"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "bundled-full"] }

# HTTP/API
reqwest = { version = "0.12", features = ["cookies", "stream", "rustls-tls", "json"], default-features = false }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
dashmap = "6"
crossbeam = "0.8"
parking_lot = "0.12"
flume = "0.11"

# ML / Embeddings (via Candle)
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
tokenizers = "0.15"
hf-hub = "0.3"

# Vector search
hnsw_rs = "0.3"

# Crypto
sha2 = "0.10"
blake3 = "1"
rand = "0.8"

# GPU rendering (Terminal Zero)
wgpu = "0.19"
winit = "0.29"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
lazy_static = "1"
inventory = "0.3"
dirs = "5"

# Compression
lz4 = "1"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
