[package]
name = "omni-brain"
version.workspace = true
edition.workspace = true
description = "Token-aware context management with smart eviction"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
