[package]
name = "omni-chain"
version.workspace = true
edition.workspace = true
description = "Hyperbeast 3D chain orchestration with macro-agent layer"

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
flume.workspace = true
rand.workspace = true
