[package]
name = "omni-integrations"
version.workspace = true
edition.workspace = true
description = "Integration layer for breakthrough modules (determinism, proxy-mesh, mvmha)"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
sha2.workspace = true
blake3.workspace = true
rand.workspace = true
