[package]
name = "omni-ir"
version.workspace = true
edition.workspace = true
description = "Self-writing IR engine with global analyzer registry"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
inventory.workspace = true
sha2.workspace = true
blake3.workspace = true
rand.workspace = true
