[package]
name = "omni-portal"
version.workspace = true
edition.workspace = true
description = "AI re-entry portal with browser automation"

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
chromiumoxide.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
rusqlite.workspace = true
dirs.workspace = true
